<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.thanht.weather.home.list.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/padding_small"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@{@string/search_hint}"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="@dimen/actionBarSize"
            android:paddingHorizontal="@dimen/padding_tiny"
            android:paddingVertical="@dimen/padding_normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textColorHint="@color/color_hint"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:hint="Search in city name">

            <requestFocus />
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/get_weather"
            android:enabled="@{viewModel.activeGetWeatherButtonLive}"
            android:text="@string/get_weather"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtWeather" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWeather"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGetWeather"
            tools:listitem="@layout/item_weather" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGetWeather" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>