<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        tools:background="@color/white"
        tools:layout_marginHorizontal="@dimen/padding_normal"
        tools:layout_marginVertical="@dimen/padding_normal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/padding_large"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_medium"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivImage"
            tools:text=""
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginEnd="@dimen/padding_medium"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="@string/content_unexpected_error"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/btnNegative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_tiny"
            android:layout_marginBottom="@dimen/padding_medium"
            android:background="@drawable/button_dialog_negative"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/text_cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnPositive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContent"
            app:layout_goneMarginEnd="@dimen/padding_medium"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/btnPositive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_tiny"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_medium"
            android:layout_marginBottom="@dimen/padding_medium"
            android:background="@drawable/button_positive_dialog"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnNegative"
            app:layout_constraintTop_toBottomOf="@+id/tvContent"
            app:layout_goneMarginStart="@dimen/padding_medium"
            tools:text="@string/text_ok"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
